syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "BookServiceProto";

service BookService 
{
    rpc AddBook (Book) returns (Book);
    rpc UpdateBook (Book) returns (Book);
    rpc DeleteBook (BookId) returns (Empty);
    rpc ListBooks (Empty) returns (BookList);
}

message Book {
    string title = 1;
    string author = 2;
    int32 publicationYear = 3;
}

message BookId {
    string id = 1;
}

message BookList {
    repeated Book books = 1;
}

message Empty {}